<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8E61F7"
    tools:context=".register">


    <View
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="570dp"
        android:background="#E9E5E5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:text="@string/email"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtuname" />

    <EditText
        android:id="@+id/txtuname"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="194dp"
        android:layout_height="129dp"
        android:layout_marginStart="284dp"
        android:layout_marginEnd="-86dp"
        android:layout_marginBottom="53dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circle" />

    <Button
        android:id="@+id/veributton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#8E61F7"
        android:text="@string/register_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="274dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="280dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="274dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_anew_password"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtemail" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="276dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword"
        tools:text="Phone" />

    <EditText
        android:id="@+id/txtphone"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_your_mobile_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/travell" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="153dp"
        android:layout_height="76dp"
        android:layout_marginStart="-60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView15"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:id="@+id/hvacc"
        android:layout_width="224dp"
        android:layout_height="31dp"
        android:layout_marginBottom="28dp"
        android:text="@string/already_have_an_account_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>