<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".highway_look">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="314dp"
            android:layout_height="33dp"
            android:layout_marginTop="40dp"
            android:text="Starting point"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="312dp"
            android:layout_height="34dp"
            android:layout_marginTop="8dp"
            android:text="Select desination"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="320dp"
            android:layout_height="53dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/kadawatha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="317dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/galle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="100dp"
            android:layout_height="41dp"
            android:layout_marginTop="48dp"
            android:text="@string/booking"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="241dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="Pick a date"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="239dp"
            android:layout_height="49dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/pick_a_time"
            android:inputType="time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.296"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="135dp"
            android:layout_height="53dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/seat_count"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="151dp"
            android:layout_height="42dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:text="Bus Number"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
            app:layout_constraintHorizontal_bias="0.446"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="211dp"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/pick_the_bus_number"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <Button
            android:id="@+id/bookbt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="#8E61F7"
            android:text="Book now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:text="Seat Count"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.707"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/editTextTime" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>