<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".list_of_buses">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="238dp"
        android:layout_height="42dp"
        android:layout_marginTop="184dp"
        android:text="@string/kaduwela_to_colpitty"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="418dp"
        android:layout_height="159dp"
        android:layout_marginTop="-18dp"
        android:layout_marginBottom="24dp"
        android:background="#8E61F7"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Date Picker Input -->

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/travell"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="359dp"
        android:layout_height="64dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/viewbut1"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/lightpurple"
        android:text="@string/bus_no_689_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="264dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#C6A3D9"
        android:text="@string/bus_no_234_view"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toEndOf="@+id/imageView10" />

    <Button
        android:id="@+id/button5"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#C6A3D9"
        android:text="@string/bus_no_17_view"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/viewbut1" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:srcCompat="@drawable/directions_busonly" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/directions_busonly" />

    <Button
        android:id="@+id/button6"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#C6A3D9"
        android:text="@string/bus_no_675_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/directions_busonly" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/directions_busonly" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="164dp"
        android:layout_height="131dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="97dp"
        android:layout_height="82dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:srcCompat="@drawable/circle" />

</androidx.constraintlayout.widget.ConstraintLayout>