<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="297dp"
            android:layout_height="43dp"
            android:layout_marginTop="36dp"
            android:text="Name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/editTextText7"
            android:layout_width="299dp"
            android:layout_height="49dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Enter your name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:layout_marginTop="24dp"
            android:text="@string/my_profile"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextText8"
            android:layout_width="298dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="Enter your email"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="299dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:text="@string/email_address"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText7" />

        <EditText
            android:id="@+id/editTextText9"
            android:layout_width="299dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/enter_your_address"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="298dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:text="Address"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText8" />

        <EditText
            android:id="@+id/editTextText10"
            android:layout_width="292dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="Enter your mobile number"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="304dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:text="Contact"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText9" />

        <EditText
            android:id="@+id/editTextDate3"
            android:layout_width="123dp"
            android:layout_height="49dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="Gender"
            android:inputType="date"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumber6"
            app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <EditText
            android:id="@+id/editTextNumber6"
            android:layout_width="121dp"
            android:layout_height="48dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="76dp"
            android:ems="10"
            android:hint="Age"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="95dp"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:text="Gender"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText10" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="93dp"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:text="Age"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/editTextText10" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:backgroundTint="#8E61F7"
            android:text=" Save Details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>